--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>titulo de la pagina</h1>
     <p>escribo en remoto</p>
+    <p>Esto es una prueba de conflicto</p>
   </body>
 </html>
